Update2 index.html

--- a/index.html
+++ b/index.html
@@ -34,8 +34,18 @@
   <!-- Education content -->
   <div id="education" class="section-content">
     <h2>My Education</h2>
-    <p>Here you can write about your school, college, degrees, etc.</p>
-  </div>
+    <h3>Louisiana State University, Baton Rouge, LA</h3>
+  <p>B.S. in Computer Science, Focus on Cybersecurity — August 2023 – Present</p>
+  <ul>
+    <li>President's Honor Roll, Spring 2025</li>
+  </ul>
+
+  <h3>Moon Area High School, Coraopolis, PA</h3>
+  <p>High School Diploma — August 2019 – June 2023</p>
+  <ul>
+    <li>Graduated with Honor Roll</li>
+  </ul>
+</div>
 
   <!-- Projects content -->
   <div id="projects" class="section-content">
