--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 
-  <h1>Hello, I'm Adithya!</h1>
+  <h1>Hello, I'm Adithya Anand!</h1>
   <p>This is my personal site hosted with GitHub Pages.</p>
 
   <!-- Navigation menu -->
