--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
   <ul>
     <li>Graduated with Honor Roll</li>
   </ul>
+   <h3>Certificates</h3>
+    <p>Currently working on getting the ISC² Certified in Cybersecurity (CC) certification.</p>
 </div>
 
   <!-- Projects content -->
