--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h2>My Projects</h2>
 
     <div class="project-link">
-      <a href="https://adithyaanand42.github.io/projects/unity-project-1/" target="_blank">Unity Project 1 (Play Online)</a><br>
+      <a href="https://adithyaanand42.github.io/Ducks4/" target="_blank">Ducks Tower Defense Game (Play Online)</a><br>
       <a href="https://github.com/CSC-3380-Spring-2025/Team-14" target="_blank">GitHub Repo</a>
     </div>
 
